--- a/tailwind/custom/base.css
+++ b/tailwind/custom/base.css
@@ -34,28 +34,37 @@ p.is-style-material {
 }
 
 #masthead #navbar {
-    @apply h-36 text-lg;
+    @apply h-24 lg:h-36 text-lg;
 }
 #masthead.minimized #navbar {
     @apply h-20 text-base;
 }
 
-#masthead .brand-name {
-    @apply text-xl transition-all duration-300;
+
+
+#masthead.minimized .masthead-inner {
+    @apply bg-primary;
 }
-#masthead.minimized .brand-name {
+
+#masthead .brand-name-and-tagline {
     @apply text-lg;
+}
+#masthead.minimized .brand-name-and-tagline {
+    @apply text-sm;
+}
+#masthead .brand-name {
+    @apply transition-all duration-300;
+    font-size: 1.2em;
 }
 
 #masthead .brand-tagline {
-    @apply text-lg transition-all duration-300;
-}
-#masthead.minimized .brand-tagline {
-    @apply text-sm;
+    @apply transition-all duration-300;
+    font-size: 0.8em;
 }
 
+
 img.navbar-logo {
-    @apply w-[150px] lg:w-[240px] lg:top-[calc(50%-110px)]; 
+    @apply w-[100px] lg:w-[240px] lg:top-[calc(50%-110px)]; 
 }
 #masthead.minimized img.navbar-logo {
     @apply w-[80px] lg:w-[120px] lg:-translate-y-2; 
@@ -87,7 +96,7 @@ img.navbar-logo {
 }
 
 .member-counter-box.wp-block-group {
-    @apply rounded-tr-none rounded-br-none !important;
+    @apply lg:rounded-tr-none lg:rounded-br-none !important;
 }
 
 #colophon a:hover {
@@ -152,4 +161,51 @@ img.uagb-team__image-crop-circle {
 
 html {
 	@apply scroll-pt-40 scroll-smooth;
+}
+
+img.uagb-team__image-crop-circle {
+    @apply aspect-square object-cover;
+}
+
+:root p.uagb-team__desc {
+    @apply text-base;
+}
+
+.swiper-pagination-bullet {
+    @apply w-3 h-3;
+}
+
+:root h3.uagb-post__title.uagb-post__text a {
+    @apply font-bold text-black;
+}
+
+/* ul.is-style-checkmark li {
+    @apply list-image;
+  
+   list-style-image: url('images/checkmark.svg');
+} */
+
+ul.is-style-checkmark li::marker {
+    @apply font-material content-['done'] text-black text-lg;
+}
+
+.member-counter-wrapper.wp-block-group > .wp-block-columns {
+    @apply max-w-lg lg:max-w-none mx-auto px-5 lg:px-0;
+}
+
+.footer-links.wp-block-group {
+    @apply flex-col text-center lg:flex-row gap-y-0;
+}
+.footer-links.wp-block-group .social-icons {
+    @apply justify-center;
+}
+
+ul.wp-block-latest-posts__list a.wp-block-latest-posts__post-title {
+    @apply no-underline text-foreground font-bold;
+}
+ul.wp-block-latest-posts__list .wp-block-latest-posts__post-date {
+    @apply uppercase text-foreground/50;
+}
+ul.wp-block-latest-posts__list > li .wp-block-latest-posts__featured-image {
+    @apply mb-5;
 }
